TestSuite/errors/err0283.pas
begin
  assert(typeof(List<,>).FullName = 'System.Collections.Generic.List`1');
end.